# fanshim-python

./: CHANGELOG.md  Makefile  install.sh  pyproject.toml  requirements-dev.txt  tox.ini  uninstall.sh
.github/workflows/: build.yml  test.yml
examples/: install-service.sh  start-fanshim-service.sh
fanshim/: __init__.py
